--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
         "express": "^4.18.2",
         "fs-extra": "^11.1.1",
         "jsonwebtoken": "^9.0.2",
-        "multer": "^1.4.5-lts.1",
+        "multer": "^2.0.1",
         "node-cache": "^5.1.2",
         "path": "^0.12.7",
         "pptxgenjs": "^3.12.0",
