~Interim development snapshot~
Security: Significantly hardened the pptxgenjs config file upload
Security: Fully separated user data and code storage locations. All static path assumptions removed from codebase.
Security: SECRET_KEY moved to separate environment file
Bugfix: All entries in config.json are now correctly used

- Refactored maintenance.js to utilize configuration from config.js.
- Implemented JSON path validation for PPTX configuration saving.
- Added error handling and user feedback for configuration errors in the frontend.
- Introduced fs-guard.js for secure file path resolution and validation.
- Created json-path-validator.js for validating image paths in JSON.
- Updated cardConfig.json to include master slide configuration.
- Improved error display in the maintenance UI with detailed validation feedback.
- Updated package versions and added dotenv and envalid for environment variable management.

--- a/backend/config.json
+++ b/backend/config.json
@@ -1,18 +1,18 @@
 {
-  "CONFIG_IMG_DIR": "resources",
+  "CONFIG_IMG_DIR": "/var/lib/auction/resources",
   "SAMPLE_DIR": "sample-assets",
-  "BACKUP_DIR": "backups",
+  "BACKUP_DIR": "/var/lib/auction/backup",
   "MAX_UPLOADS": 30,
   "allowedExtensions": [".jpg", ".jpeg", ".png"],
-  "DB_PATH": "auction.db",
-  "UPLOAD_DIR": "uploads",
-  "SECRET_KEY": "RarityIsBestPony",
-  "port": 3000,
-  "LOG_LEVEL": "INFO",
+  "DB_PATH": "/var/lib/auction/",
+  "DB_NAME": "auction.db",  
+  "UPLOAD_DIR": "/var/lib/auction/uploads",
+  "PORT": 3001,
+  "LOG_LEVEL": "DEBUG",
+  "LOG_DIR": "/var/log/auction",
+  "LOG_NAME": "server.log",
   "MAX_AUCTIONS": 20,
-  "MAX_ITEMS": 2000
-
-
-
-
-}
+  "MAX_ITEMS": 2000,
+  "PPTX_CONFIG_DIR": "/var/lib/auction",
+  "OUTPUT_DIR": "/var/lib/auction/output"
+  }
