--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
     "name": "charity-auction-backend",
-    "version": "1.1.0",
+    "version": "1.1.0-dev-001",
     "description": "Backend for Charity Auction Submission Management",
     "main": "backend.js",
     "scripts": {
@@ -14,6 +14,8 @@
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "csv-parser": "^3.2.0",
+        "dotenv": "^17.2.3",
+        "envalid": "^8.1.0",
         "express": "^4.18.2",
         "fs-extra": "^11.1.1",
         "jsonwebtoken": "^9.0.2",
