~~ Final planned features for next release
sec: Adds password hashing
sec: configurable pw min length enforcement
sec: Maint pw not shown in the clear on maint page
sec: SumUp payments blocked if cashier pw is set to the default
bugfix: Fixed auction reset sequencing
feature: Removed set-maint-pw.js and replaced with server-management.js supporting maint pw reset & audit log clear
feature: integrity check updated to include v2 table structures
feature: Export CSV now generates a zip file containing CSVs and metadata for each db table
remove: Removed deprecated delete invalid items functionality from integrity check.

--- a/backend/auction.env.example
+++ b/backend/auction.env.example
@@ -4,6 +4,7 @@
 # SECRET_KEY - Used to secure login sessions. Put a long (> 16 chars) random string.
 SECRET_KEY=
 
+
 # SumUp: API for online payments
 SUMUP_API_KEY=sup_sk_xxxxxxx    # SumUp API Key for Online Payments (Bearer)
 SUMUP_MERCHANT_CODE=Mxxxxxxx                          # Your merchant_code from SumUp dashboard
@@ -16,8 +17,10 @@ SUMUP_APP_ID=YourAppID                     # Your SumUp App ID for deep link pay
 SUMUP_CALLBACK_SUCCESS=https://yoursite.com/payments/sumup/callback/success # Success callback URL
 SUMUP_CALLBACK_FAIL=https://yoursite.com/payments/sumup/callback/fail # Failure callback URL
 
-# SumUp: payment intent TTL in minutes
+# SumUp: Other config items
 PAYMENT_INTENT_TTL_MINUTES=20
+CURRENCY=GBP                     # Currency code for payments (e.g., GBP, EUR). Must be supported by SumUp.
+
 
 # Enable or disable payment methods
 # Note that the SumUp methods require proper configuration above - This will be checked at runtime.
