--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
     "name": "charity-auction-backend",
-    "version": "1.1.0-dev-004/sumup01",
+    "version": "1.1.0-dev-005/sumup01",
     "description": "Backend for Charity Auction Submission Management",
     "main": "backend.js",
     "scripts": {
@@ -11,6 +11,7 @@
         "@json2csv/plainjs": "^7.0.6",
         "archiver": "^7.0.1",
         "better-sqlite3": "^11.9.1",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "csv-parser": "^3.2.0",
