~~~Backend Unit tests completed~~~
feat: restart server endpoint now supports pm2 and system service operation
sec: Further hardening on public routes. login now supports wrong password lockout (default 8 tries, 5 mins) and add item has rate limiting
sec: /validate-auction and /add item no longer leak auction ID. A long random public ID is used instead. This guards against guessing our predictable auction ID
bugfix: Various small fixes uncovered by unit testing (mostly bugs in the response paths
feat: controls for the lockout and rate limiting exposed in config.json

- Added new configuration options for rate limiting
- Updated config.json with new rate limiting parameters
- Improved database handling in db.js to log warnings when using the current directory for the database path and to create a new database if it doesn't exist.
- Modified maintenance.js to return a 403 status for incorrect maintenance password attempts and improved logging.
- Updated auction state checking middleware to include public ID resolution for auctions.
- Refactored error handling in various routes to return 400 status codes for specific error cases instead of 404 or 409.
- Implemented a reset database feature in server-management.js to clear all data except for passwords and audit logs.
- Adjusted admin and submission scripts to utilize public IDs for auction references.
- Updated slideshow index.html to handle auction validation using public IDs.

--- a/backend/config.json
+++ b/backend/config.json
@@ -11,10 +11,15 @@
   "LOG_LEVEL": "DEBUG",
   "LOG_DIR": "/var/log/auction",
   "LOG_NAME": "server.log",
-  "MAX_AUCTIONS": 20,
+  "MAX_AUCTIONS": 100,
   "MAX_ITEMS": 2000,
   "PPTX_CONFIG_DIR": "/var/lib/auction",
   "OUTPUT_DIR": "/var/lib/auction/output",
   "CURRENCY_SYMBOL": "£",
-  "PASSWORD_MIN_LENGTH": 5
+  "PASSWORD_MIN_LENGTH": 5,
+  "RATE_LIMIT_WINDOW": 60,
+  "RATE_LIMIT_MAX": 10,
+  "LOGIN_LOCKOUT_AFTER": 8,
+  "LOGIN_LOCKOUT": 300,
+  "SERVICE_NAME": "Auction_Backend"
   }
