Completed front-end and usability testing. New version 2.0.0-rc1
Added hover photo preview feature for better user experience in cashier and settlement views.
Items with bids can no longer be edited, moved to another auction or deleted
Various other bugfixes and improvements

- Photo extensions are now checked on item creation.
- Removed unused /config/pptx endpoints
- Refactored history endpoint to use single common audit log endpoint.
- move-auction endpoint separated from update-item and compliance checks improved
- Improved admin script for better string handling and added keyboard shortcuts for efficiency.
- Added database download functionality in maintenance scripts.
- Upload database is significantly more robust incl schema version checks
- Enhanced styles for mobile optimization across various components.
- database download/upload operations now close the db before operating to make sure that data is written backend
	-This required guards around pre-prepared SQL statements
- Database now stores schema ver. Used on db import and to skip db setup steps
- Stripped out caching functionality from checkAuctionState.js
- Cashier default password warning is now displayed dynamically
- Unit tests updated to algin

--- a/backend/auction.env.example
+++ b/backend/auction.env.example
@@ -25,8 +25,8 @@ CURRENCY=GBP                     # Currency code for payments (e.g., GBP, EUR). 
 # Enable or disable payment methods
 # Note that the SumUp methods require proper configuration above - This will be checked at runtime.
 
-SUMUP_WEB_ENABLED=true                  # Enable SumUp online payments
-SUMUP_CARD_PRESENT_ENABLED=true         # Enable SumUp deep link (card-present) payments
+SUMUP_WEB_ENABLED=false                  # Enable SumUp online payments
+SUMUP_CARD_PRESENT_ENABLED=false         # Enable SumUp deep link (card-present) payments
 CASH_PAYMENT_ENABLED=true               # Enable cash payments
 MANUAL_CARD_PAYMENT_ENABLED=true        # Enable manual payments
 PAYPAL_PAYMENT_ENABLED=true            # Enable PayPal payments
