--- a/backend/config.json
+++ b/backend/config.json
@@ -1,25 +1,27 @@
 {
-  "CONFIG_IMG_DIR": "/var/lib/auction/resources",
-  "SAMPLE_DIR": "sample-assets",
-  "BACKUP_DIR": "/var/lib/auction/backup",
-  "MAX_UPLOADS": 30,
+  "PORT":               3001,
+  "CONFIG_IMG_DIR":     "/var/lib/auction/resources",
+  "BACKUP_DIR":         "/var/lib/auction/backup",
+  "UPLOAD_DIR":         "/var/lib/auction/uploads",
+  "PPTX_CONFIG_DIR":    "/var/lib/auction",
+  "OUTPUT_DIR":         "/var/lib/auction/output",
+  "DB_PATH":            ".",
+  "DB_NAME":            "auction.db",  
+  "LOG_DIR":            "/var/log/auction",
+  "LOG_NAME":           "server.log",
+  "SAMPLE_DIR":         "sample-assets",
+  "MAX_UPLOADS":        30,
   "allowedExtensions": [".jpg", ".jpeg", ".png"],
-  "DB_PATH": "/var/lib/auction/",
-  "DB_NAME": "auction.db",  
-  "UPLOAD_DIR": "/var/lib/auction/uploads",
-  "PORT": 3001,
-  "LOG_LEVEL": "DEBUG",
-  "LOG_DIR": "/var/log/auction",
-  "LOG_NAME": "server.log",
-  "MAX_AUCTIONS": 100,
-  "MAX_ITEMS": 2000,
-  "PPTX_CONFIG_DIR": "/var/lib/auction",
-  "OUTPUT_DIR": "/var/lib/auction/output",
-  "CURRENCY_SYMBOL": "£",
-  "PASSWORD_MIN_LENGTH": 5,
-  "RATE_LIMIT_WINDOW": 60,
-  "RATE_LIMIT_MAX": 10,
-  "LOGIN_LOCKOUT_AFTER": 8,
-  "LOGIN_LOCKOUT": 300,
-  "SERVICE_NAME": "Auction_Backend"
+  "LOG_LEVEL":          "DEBUG",
+  "MAX_AUCTIONS":       100,
+  "MAX_ITEMS":          2000,
+  "CURRENCY_SYMBOL":    "£",
+  "PASSWORD_MIN_LENGTH":  5,
+  "RATE_LIMIT_WINDOW":    30,
+  "RATE_LIMIT_MAX":       20,
+  "LOGIN_LOCKOUT_AFTER":  8,
+  "LOGIN_LOCKOUT":        30,
+  "SERVICE_NAME":         "Auction_Backend",
+  "ENABLE_CORS":          false,
+  "ALLOWED_ORIGINS":      ["localhost:3000", "example.com:3000"]
   }
