FInal testing, mainly focussed on running the backend as a service. New version 2.0.0-rc2 config reverted to production settings
bugfix: slideshow now works in all states again (bug introduced by move to publicId)
feature: admin interface keyboard shortcuts on edit and add pages
bugfix: env file inline comments break systemctl. example env file updated
partial fix: server restart code is now better but unlikely to work due to security settings

Refactor server restart logic in maintenance.js to improve error handling and retry attempts;
enhance error messages and logging in payment creation;
add new tests for auction validation;
streamline admin interface with keyboard shortcuts;
clean up unused code and improve error handling in various scripts;
removed all frontend console logging

--- a/backend/config.json
+++ b/backend/config.json
@@ -1,27 +1,27 @@
 {
-  "PORT":               3001,
+  "PORT":               3000,
   "CONFIG_IMG_DIR":     "/var/lib/auction/resources",
   "BACKUP_DIR":         "/var/lib/auction/backup",
   "UPLOAD_DIR":         "/var/lib/auction/uploads",
   "PPTX_CONFIG_DIR":    "/var/lib/auction",
   "OUTPUT_DIR":         "/var/lib/auction/output",
-  "DB_PATH":            ".",
+  "DB_PATH":            "/var/lib/auction",
   "DB_NAME":            "auction.db",  
   "LOG_DIR":            "/var/log/auction",
   "LOG_NAME":           "server.log",
   "SAMPLE_DIR":         "sample-assets",
-  "MAX_UPLOADS":        30,
+  "MAX_UPLOADS":        100,
   "allowedExtensions": [".jpg", ".jpeg", ".png"],
   "LOG_LEVEL":          "DEBUG",
   "MAX_AUCTIONS":       100,
   "MAX_ITEMS":          2000,
   "CURRENCY_SYMBOL":    "£",
-  "PASSWORD_MIN_LENGTH":  5,
-  "RATE_LIMIT_WINDOW":    30,
-  "RATE_LIMIT_MAX":       20,
+  "PASSWORD_MIN_LENGTH":  8,
+  "RATE_LIMIT_WINDOW":    60,
+  "RATE_LIMIT_MAX":       10,
   "LOGIN_LOCKOUT_AFTER":  8,
-  "LOGIN_LOCKOUT":        30,
-  "SERVICE_NAME":         "Auction_Backend",
+  "LOGIN_LOCKOUT":        600,
+  "SERVICE_NAME":         "auction-backend",
   "ENABLE_CORS":          false,
   "ALLOWED_ORIGINS":      ["localhost:3000", "example.com:3000"]
   }
