--- a/backend/auction.env.example
+++ b/backend/auction.env.example
@@ -1,33 +1,48 @@
 # Example environment configuration for Convention Auction backend.
 # Copy this file to 'auction.env' and fill in the appropriate values.
+# Systemctrl is not tolerant of comments on the same line as parameters
 
 # SECRET_KEY - Used to secure login sessions. Put a long (> 16 chars) random string.
 SECRET_KEY=
 
 
 # SumUp: API for online payments
-SUMUP_API_KEY=sup_sk_xxxxxxx    # SumUp API Key for Online Payments (Bearer)
-SUMUP_MERCHANT_CODE=Mxxxxxxx                          # Your merchant_code from SumUp dashboard
-SUMUP_RETURN_URL=https://yoursite.com/payments/sumup/webhook # Return URL for hosted payments
+SUMUP_API_KEY=sup_sk_xxxxxxx    
+# SumUp API Key for Online Payments (Bearer)
+SUMUP_MERCHANT_CODE=Mxxxxxxx                          
+# Your merchant_code from SumUp dashboard
+SUMUP_RETURN_URL=https://yoursite.com/payments/sumup/webhook 
+# Return URL for hosted payments
 
 
 # SumUp: for deep link (card-present)
-SUMUP_AFFILIATE_KEY=sup_afk_xxxxxxxxxx   # SumUp Affiliate Key for deep link payments
-SUMUP_APP_ID=YourAppID                     # Your SumUp App ID for deep link payments
-SUMUP_CALLBACK_SUCCESS=https://yoursite.com/payments/sumup/callback/success # Success callback URL
-SUMUP_CALLBACK_FAIL=https://yoursite.com/payments/sumup/callback/fail # Failure callback URL
+SUMUP_AFFILIATE_KEY=sup_afk_xxxxxxxxxx   
+# SumUp Affiliate Key for deep link payments
+SUMUP_APP_ID=YourAppID                     
+# Your SumUp App ID for deep link payments
+SUMUP_CALLBACK_SUCCESS=https://yoursite.com/payments/sumup/callback/success 
+# Success callback URL
+SUMUP_CALLBACK_FAIL=https://yoursite.com/payments/sumup/callback/fail 
+# Failure callback URL
 
 # SumUp: Other config items
 PAYMENT_INTENT_TTL_MINUTES=20
-CURRENCY=GBP                     # Currency code for payments (e.g., GBP, EUR). Must be supported by SumUp.
+CURRENCY=GBP                     
+# Currency code for payments (e.g., GBP, EUR). Must be supported by SumUp.
 
 
 # Enable or disable payment methods
 # Note that the SumUp methods require proper configuration above - This will be checked at runtime.
 
-SUMUP_WEB_ENABLED=false                  # Enable SumUp online payments
-SUMUP_CARD_PRESENT_ENABLED=false         # Enable SumUp deep link (card-present) payments
-CASH_PAYMENT_ENABLED=true               # Enable cash payments
-MANUAL_CARD_PAYMENT_ENABLED=true        # Enable manual payments
-PAYPAL_PAYMENT_ENABLED=true            # Enable PayPal payments
-SUMUP_APP_INDIRECT_ENABLED=false        # Enable SumUp via android app payments. Not implemented yet.
+SUMUP_WEB_ENABLED=false                  
+# Enable SumUp online payments
+SUMUP_CARD_PRESENT_ENABLED=false         
+# Enable SumUp deep link (card-present) payments
+CASH_PAYMENT_ENABLED=true               
+# Enable cash payments
+MANUAL_CARD_PAYMENT_ENABLED=true        
+# Enable manual payments
+PAYPAL_PAYMENT_ENABLED=true            
+# Enable PayPal payments
+SUMUP_APP_INDIRECT_ENABLED=false        
+# Enable SumUp via android app payments. Not implemented yet.
