Final check-in prior to merge
docs: Update documentation and configuration for SumUp payment integration. Added serviced file
bugfix: Fixed settlement screen css mobile layout
Default passwords now match default password policy (8 chars)

--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,5 @@ backend/package-lock.json
 deploy-dev.sh
 package-lock.json
 backend/auction.env
+deploy-live.sh
+.github/copilot-instructions.md
