Fixes following deployment onto Ubuntu 	Missing package.json dependancy undici 	Service lockdown was too strict for Ubuntu 24 LTS 	Typos fixed in installation guides

--- a/backend/auction-backend.service
+++ b/backend/auction-backend.service
@@ -29,7 +29,7 @@ MemoryDenyWriteExecute=no
 RestrictSUIDSGID=yes
 RestrictRealtime=yes
 SystemCallArchitectures=native
-SystemCallFilter=@system-service
+#SystemCallFilter=@system-service
 CapabilityBoundingSet=
 AmbientCapabilities=
 
