--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,9 @@
         "pptxgenjs": "^3.12.0",
         "sharp": "^0.33.2",
         "strftime": "^0.10.0",
-        "uuid": "^9.0.1"
+        "uuid": "^9.0.1",
+        "undici": "^7.20.0"
+
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
