--- a/backend/config.json
+++ b/backend/config.json
@@ -12,7 +12,7 @@
   "SAMPLE_DIR":         "sample-assets",
   "MAX_UPLOADS":        100,
   "allowedExtensions": [".jpg", ".jpeg", ".png"],
-  "LOG_LEVEL":          "INFO",
+  "LOG_LEVEL":          "DEBUG",
   "MAX_AUCTIONS":       100,
   "MAX_ITEMS":          2000,
   "CURRENCY_SYMBOL":    "£",
